2004-02-12  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (emft_tree_button_press): Updated for em-popup
	API change (altho currently passes a dummy value).

	* em-popup.c (em_popup_target_new_folder): Check for vTrash/vJunk
	by checking the CAMEL_FOLDER_VIRTUAL info flags bit. (perhaps this
	flag should be renamed to SPECIAL? VIRTUAL might not have been a
	good name). Also changed to check flags & CAMEL_FOLDER_NOSELECT
	rather than checking the uri string for a noselect param.

	* mail-folder-cache.c (unset_folder_info): Instead of checking for
	";noselect" in the uri, check for a CAMEL_FOLDER_NOSELECT flag on
	mfi->flags.
	(setup_folder): Copy the fi->flags to mfi->flags here.
	(rename_folders): Same.
	(setup_folder): Check fi->flags for CAMEL_FOLDER_NOSELECT here
	instead.
	(rename_folders): Same. Also gets rid of a FIXME.

2004-02-18  Jeffrey Stedfast  <fejj@ximian.com>

	* em-format-html-display.c (efhd_xpkcs7mime_validity_clicked):
	Revert change from yesterday.
	(efhd_xpkcs7mime_button): Use the icon from the table.

2004-02-18  Not Zed  <NotZed@Ximian.com>

	** See bug #54492.
	
	* em-folder-tree.c (emft_popup_copy_folder_selected): check the
	store flags, not the fragment presence to find out if we use the
	fragment as the path.

2004-02-17  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #54060 (except for the "don't let users copy/move
	messages to Outbox" bit).

	* em-folder-tree.c (emft_drop_target): Rearranged a little. We can
	check for special dest folders right away. Also added a check for
	the default local folders (Drafts/Inbox/Outbox/Sent) since we
	don't want to be able to move them anywhere else (copying is ok).
	(emft_popup_copy_folder_selected): Don't allow moving any of the
	default local folders to be consistant with drag&drop changes.
	(emft_popup_rename_folder): Don't allow the user to rename a
	default local folder.
	(emft_popup_delete_folder): Don't allow deletion of special local
	folders.
